<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="emailForm">toto@tutu.com</string>
    <string name="passForm">tata</string>
    <string name="app_name">SYM Template Activity</string>
    <string name="email">E-mail</string>
    <string name="psw">Password</string>
    <string name="signin">Sign in</string>
    <string name="wronglogin">Login failed</string>
    <string name="wrong">Email or Password not recognized</string>
    <string name="good">Valid login, welcome !</string>
    <string name="back">Already Login !</string>
    <string name="title_activity_new">newActivity</string>
    <string name="labelIEMI">Here is your IEMI :</string>
    <string name="labelPassword">Here is your password :</string>
    <string name="labelEmail">Here is your email :</string>
    <string name="title_activity_asynchrone">asynchrone</string>
    <string name="title_activity_differe">differe</string>
    <string name="title_activity_graph_ql">graphQl</string>
    <string name="title_activity_serialisation">serialisation</string>
    <string name="title_activity_compresse">compresse</string>

</resources>
